<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
      <include 
      android:id="@+id/rollingview"
      android:layout_width="match_parent"
      android:layout_height="180dp"
      layout="@layout/rolling_layout"
      />
	  <RelativeLayout 
	      android:layout_below="@+id/rollingview"
	      android:layout_width="match_parent"
	      android:layout_height="match_parent"
	      android:layout_margin="@dimen/dimen_20px"
	      android:gravity="center">
	      <Button 
	          android:id="@+id/menu_lights"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:text="@string/menu_light"
	          />
	       <Button 
	          android:layout_below="@+id/menu_lights"
	          android:id="@+id/menu_air"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:text="@string/menu_air_conditioning"
	          />
	       <Button 
	          android:layout_below="@+id/menu_air"
	          android:id="@+id/menu_music"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:text="@string/menu_bgmusic"
	          />
	       <Button 
	          android:layout_below="@+id/menu_music"
	          android:id="@+id/menu_curtain"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:text="@string/menu_curtain"
	          />
	       <Button 
	          android:layout_below="@+id/menu_curtain"
	          android:id="@+id/menu_scene"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:text="@string/menu_scene"
	          />
	       <Button 
	          android:layout_below="@+id/menu_scene"
	          android:id="@+id/menu_service"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:text="@string/menu_service"
	          />
	       <Button 
	          android:layout_below="@+id/menu_service"
	          android:id="@+id/menu_tv"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:text="@string/menu_tv"
	          />
	  </RelativeLayout>
</RelativeLayout>
